--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -43,25 +43,61 @@
         <nav class="col-lg-7 text-lg-right">
           <ul class="m-0 px-0 pb-5 pb-lg-0">
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/']">HOME</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >HOME</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/about-me']">ABOUT</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/about-me']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >ABOUT</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/portfolio/']">PORTFOLIO</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/portfolio/']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >PORTFOLIO</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/hire-me']">HIRE ME</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/hire-me']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >HIRE ME</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/services/']">SERVICES</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/services/']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >SERVICES</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline" [routerLink]="['/my-skills']">SKILLS</a>
+              <a
+                class="header__nav-link no-underline"
+                [routerLink]="['/my-skills']"
+                [routerLinkActive]="'header__nav-link--active'"
+                >SKILLS</a
+              >
             </li>
             <li class="d-inline-flex">
-              <a class="header__nav-link no-underline pr-lg-0" [routerLink]="['/contact-me']">CONTACT</a>
+              <a
+                class="header__nav-link no-underline pr-lg-0"
+                [routerLink]="['/contact-me']"
+                [routerLinkActive]="'header__nav-link--active'"
+              >
+                CONTACT</a
+              >
             </li>
           </ul>
         </nav>
