--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -15,8 +15,8 @@
 .header__logo {
   font-family: $font-family-trajan;
   font-size: 2.5rem;
-  padding-top: 4.0rem;
-  padding-bottom: 4.0rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 
   &:hover {
     text-decoration: none;
@@ -26,10 +26,13 @@
   @include bannerBg();
 }
 .header__nav-link {
-  padding: 1.2rem 2.0rem 1.2rem 0;
+  padding: 1.2rem 2rem 1.2rem 0;
   color: $white;
 
   &:hover {
     color: $secondary-color;
   }
+}
+.header__nav-link--active {
+  color: $secondary-color;
 }
