--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,30 +19,36 @@
             <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
             <dd class="d-inline-flex pr-4 pb-4">
               <fa-icon
-                class="d-inline-flex fa-internet-explorer footer__browser-icon"
+                class="d-inline-flex justify-content-center fa-internet-explorer footer__icon"
                 [icon]="faInternetExplorer"
               ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-opera footer__browser-icon" [icon]="faOpera"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center fa-opera footer__icon" [icon]="faOpera"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-firefox footer__browser-icon" [icon]="faFirefox"></fa-icon>
+              <fa-icon
+                class="d-inline-flex justify-content-center fa-firefox footer__icon"
+                [icon]="faFirefox"
+              ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-chrome footer__browser-icon" [icon]="faChrome"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center fa-chrome footer__icon" [icon]="faChrome"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-safari footer__browser-icon" [icon]="faSafari"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center fa-safari footer__icon" [icon]="faSafari"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-android footer__browser-icon" [icon]="faAndroid"></fa-icon>
+              <fa-icon
+                class="d-inline-flex justify-content-center fa-android footer__icon"
+                [icon]="faAndroid"
+              ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-apple footer__browser-icon" [icon]="faApple"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center fa-apple footer__icon" [icon]="faApple"></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4 pb-4">
-              <fa-icon class="d-inline-flex fa-linux footer__browser-icon" [icon]="faLinux"></fa-icon>
+              <fa-icon class="d-inline-flex justify-content-center fa-linux footer__icon" [icon]="faLinux"></fa-icon>
             </dd>
           </dl>
         </div>
@@ -62,28 +68,34 @@
         <div class="col-sm-4">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
-            <dd class="col-6"><a class="footer__nav-link" rel="nofollow" href="https://angular.io/">Angular</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/">RxJs</a></dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://material.angular.io/">
-                material
+              <a class="footer__nav-link" rel="nofollow" href="https://angular.io/" target="_blank">Angular</a>
+            </dd>
+            <dd class="col-6">
+              <a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/" target="_blank">RxJs</a>
+            </dd>
+            <dd class="col-6">
+              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://material.angular.io/">
+                Material
               </a>
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://ngxs.gitbook.io/ngxs/">
+              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://ngxs.gitbook.io/ngxs/">
                 NGXS
               </a>
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://nodejs.org/en/">Node</a>
+              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://nodejs.org/en/">Node</a>
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="http://stackoverflow.com/">Stack overflow</a>
+              <a class="footer__nav-link" rel="nofollow" target="_blank" href="http://stackoverflow.com/"
+                >Stack overflow</a
+              >
             </dd>
           </dl>
         </div>
       </div>
-      <div class="row">
+      <div class="row align-items-end">
         <div class="col-sm-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
@@ -102,24 +114,20 @@
         <div class="col-sm-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
-            <dd>
-              <a
-                rel="nofollow"
-                href="http://validator.w3.org/check?uri=referer"
-                target="_blank"
-                class="validHtml5 footer__nav-link"
-              >
-                <i class="fa fa-html5 orange large"></i>
+            <dd class="d-inline-flex pr-4">
+              <a href="https://github.com/omarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
+                <fa-icon
+                  class="d-inline-flex justify-content-center fa-github footer__icon"
+                  [icon]="faGithub"
+                ></fa-icon>
               </a>
             </dd>
-            <dd>
-              <a
-                rel="nofollow"
-                href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"
-                target="_blank"
-                class="validCss3 footer__nav-link"
-              >
-                <i class="fa fa-css3 lightBlue large"></i>
+            <dd class="d-inline-flex pr-4">
+              <a href="https://bitbucket.org/omarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
+                <fa-icon
+                  class="d-inline-flex justify-content-center fa-bitbucket footer__icon"
+                  [icon]="faBitbucket"
+                ></fa-icon>
               </a>
             </dd>
           </dl>
@@ -127,19 +135,23 @@
         <div class="col-sm-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
-            <dd>
-              <a href="skype:omar.creativedevelopments.net?call" target="_blank" class="footer__nav-link">
-                <i class="fa fa-skype lightBlue large"></i>
+            <dd class="d-inline-flex pr-4">
+              <a href="skype:omar.creativedevelopments.net?call" target="_blank" class="d-inline-flex footer__nav-link">
+                <fa-icon class="d-inline-flex skype-color footer__icon" [icon]="faSkype"></fa-icon>
               </a>
             </dd>
-            <dd>
-              <a href="https://www.linkedin.com/in/omarcreativedev" class="footer__nav-link">
-                <i class="fa fa-linkedin darkBlue large"></i>
+            <dd class="d-inline-flex pr-4">
+              <a
+                href="https://www.linkedin.com/in/omarcreativedev"
+                target="_blank"
+                class="d-inline-flex footer__nav-link"
+              >
+                <fa-icon class="d-inline-flex linked-in-color footer__icon" [icon]="faLinkedinIn"></fa-icon>
               </a>
             </dd>
-            <dd>
-              <a href="https://twitter.com/OmarCreativeDev" class="footer__nav-link">
-                <i class="fa fa-twitter lightBlue large"></i>
+            <dd class="d-inline-flex pr-4">
+              <a href="https://twitter.com/OmarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
+                <fa-icon class="d-inline-flex twitter-color footer__icon" [icon]="faTwitter"></fa-icon>
               </a>
             </dd>
           </dl>
